--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,6 +18,8 @@
 @import './components/dialogs.css';
 @import './components/menus.css';
 @import './components/terminal.css';
+@import './components/color-selector.css';
+@import './components/folder-dialog.css';
 
 
 /* --- Pages --- */
